--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
+    compile 'com.jakewharton:butterknife:6.1.0'
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-android-driver
     compile 'org.seleniumhq.selenium:selenium-android-driver:2.20.0'
     androidTestCompile 'junit:junit:4.12'
