--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
@@ -11,11 +12,16 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    lintOptions {
+        abortOnError false
     }
 }
 
@@ -28,4 +34,13 @@ dependencies {
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-android-driver
     compile 'org.seleniumhq.selenium:selenium-android-driver:2.20.0'
     androidTestCompile 'junit:junit:4.12'
+
+//    compile('com.google.apis:google-api-services-drive:v3-rev46-1.22.0') {
+////        exclude module: 'httpclient' //by artifact name
+////        exclude group: 'org.apache.httpcomponents' //by group
+////        exclude group: 'org.apache.httpcomponents', module: 'httpclient' //by both name and group
+//        exclude module: 'httpcore'
+//        exclude module: 'httpclient'
+//    }
 }
+
